<resources>
    <string name="app_name">ParkingApp</string>
    <string name="don_t_have_an_account_click_here_to_make_one">Don\'t have an account? Click here to make one.</string>
    <string name="loginToContinue">Login to continue</string>
    <string name="loginUsername">username</string>
    <string name="loginPassword">password</string>
    <string name="loginLogin">Login</string>
    <string name="signupFirstName">First Name</string>
    <string name="signupLastName">Last Name</string>
    <string name="signupEmail">Email</string>
    <string name="signupPassword">Password</string>
    <string name="signupConfirmPassword">Confirm Password</string>
    <string name="signupButton">Sign Up</string>
    <string name="requiredField">Required Field</string>
    <string name="equaltopassword">Must be same as password</string>

    <string name="passlesseight">At least 8 digits</string>

    <string name="driveMode">Drive Mode</string>
    <string name="seeSpots">See Spots</string>
    <string name="findCar">Find Car</string>
    <string name="settings">Language</string>
    <string name="logout">Logout</string>

    <string name="loading">Loading...</string>

    <string name="greek">Greek</string>
    <string name="english">English</string>

    <string name="spotNotAvailable">This spot is not available</string>
    <string name="closeSpotQuestion">You wanna close this spot? The price is 5$ per hour.</string>
    
    <string name="yes">Yes</string>
    <string name="no">No</string>
    
    <string name="noLightSensor">This device has no light sensor</string>
    
    <string name="warning">Warning</string>
    <string name="lowLights">The lighting is low. Maybe you should open your lights.</string>
    <string name="speedLimit">You are above the speed limit!</string>

    <string name="leaveSpot">Do you want to leave? The price is </string>

    <string name="youCannot">You are already parked.</string>

    <string name="cardText">Your Card number</string>

    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    
    <string name="paid">Payment successfull</string>

    <string name="loginFail">Login failed. Please try again!</string>


    <string name="title_activity_maps">Map Activity</string>
    <string name="add_start_point">Starting Point</string>
    <string name="destination">Destination</string>

</resources>
