<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#00A9DD"
    android:gravity="center"
    android:orientation="vertical">

    <Button
        android:id="@+id/driveModeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/driveMode" />

    <Button
        android:id="@+id/goToParkingSpotsButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/seeSpots" />

    <Button
        android:id="@+id/goToMapsButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/findCar" />

    <Button
        android:id="@+id/languageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings" />

    <Button
        android:id="@+id/logoutButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/logout" />
</LinearLayout>
